src/tests/snapshots/amber__tests__compiling__recursive_function_call.ab__bash-3.2.snap
---
source: src/tests/compiling.rs
expression: ast
---
# foo(Int)
foo__0_v0() {
    local arg_7="${1}"
    echo "Value: ${arg_7}"
}

# bar(Int, Int)
bar__1_v0() {
    local a_5="${1}"
    local b_6="${2}"
    foo__0_v0 "${a_5}"
    foo__0_v0 "${b_6}"
}

bar__1_v0 1 2
